--- a/app/models/.env
+++ b/app/models/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://eco100_temp_user:5f6Df3lvKRKZPHecCbY5EmBrqMTF8KKK%40dpg-cnpmgrocmk4c73bd2rj0-a/eco100_temp
+DATABASE_URL=postgres://eco100_temp_user:5f6Df3lvKRKZPHecCbY5EmBrqMTF8KKK%@dpg-cnpmgrocmk4c73bd2rj0-a/eco100_temp
